--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <title>Authentification Spotify</title>
 </head>
 <body>
 <button id="auth-button">Connexion Spotify</button>
 
-<script type="text/javascript">
-    const client_id = '319eee2dc4eb4a9e8a957959d8e2d229';
-    const redirect_uri = 'https://fmstatify.netlify.app/callback';
-    const auth_endpoint = 'https://accounts.spotify.com/authorize';
-    const scopes = 'user-read-private user-read-email playlist-read-private';
-
-    document.getElementById('auth-button').addEventListener('click', function() {
-        window.location.href = auth_endpoint + '?response_type=token' +
-            '&client_id=' + encodeURIComponent(client_id) +
-            '&redirect_uri=' + encodeURIComponent(redirect_uri) +
-            '&scope=' + encodeURIComponent(scopes);
-    });
-</script>
+<script type="text/javascript" src="index.js"> </script>
 </body>
 </html>
