--- a/callback.html
+++ b/callback.html
@@ -4,8 +4,7 @@
     <title>Callback Spotify</title>
 </head>
 <body>
+<div id="Cplaying"></div>
 <script type="text/javascript" src="Statify.js"></script>
-<h1>Mes playlists Spotify</h1>
-<div id="playlists"></div>
 </body>
 </html>
