--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 <button id="auth-button">Connexion Spotify</button>
-<script type="text/javascript" src="index.js"> </script>
+<script type="text/javascript" src="main.js"> </script>
 </body>
 </html>
