--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button id="auth-button">Connexion Spotify</button>
+<button id="auth-button">Connexion</button>
 <script type="text/javascript" src="main.js"> </script>
 </body>
 </html>
