feat : new release started

--- a/callback.html
+++ b/callback.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="Cplaying"></div>
+<div id="latest-releases"></div>
 <script type="text/javascript" src="Statify.js"></script>
 </body>
 </html>
