--- a/callback.html
+++ b/callback.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Callback Spotify</title>
+    <title>Statify.fm</title>
+    <link rel="shortcut icon" href="imgs/Spotify.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -11,91 +12,30 @@
 </head>
 <body>
 <div id="Cplaying"></div>
-<div id="latest-releases"></div>
-<script type="text/javascript" src="Statify.js"></script>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+<div class="navigation">
+    <div id="menu-releases">
+        <div class="MusicMenu" id="newReleases">
+            <div class="MusicMenuTitle">
+                <p class="menu-heading">New Releases</p>
+            </div>
+        </div>
+    </div>
+    <div id="most-listened-tracks">
+        <div class="MusicMenu" id="mostListenedTracks">
+            <div class="MusicMenuTitle">
+                <p class="menu-heading">Most Listened Tracks</p>
+                <select id="time-range">
+                    <option value="short_term">Last 4 Weeks</option>
+                    <option value="medium_term">Last 6 Months</option>
+                    <option value="long_term">All Time</option>
+                </select>
+        </div>
+    </div>
+    </div>
+</div>
+<script type="text/javascript" src="currently-playing.js"></script>
+<script type="text/javascript" src="new-releases.js"></script>
+<script type="text/javascript" src="most-listened-tracks.js"></script>
 </body>
 </html>
